--- a/css/indexmedia.css
+++ b/css/indexmedia.css
@@ -19,10 +19,14 @@
         width: 100%;
     }
     .navigation {
-        padding-left: 10px;
-        padding-right: 10px;
-        width: 100%;
+        justify-content: space-between;
+        max-width: 280px;
         margin-bottom: 36px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .first-block{ 
+        height: 360px;
     }
     body {
         text-align: center;
