--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@
 
 .container {
     display: grid;
-    grid-template-columns: 0.5fr 1.5fr 0.5fr;
+    grid-template-columns: 0.5fr 4fr 0.5fr;
 }
 
 .navigation {
@@ -35,23 +35,34 @@
     margin-bottom: 32px;
 }
 
+.headerText {
+    letter-spacing: 0.05em;
+    color: #1F3F68;
+    opacity: 0.6;
+}
+
 .smallText {
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 26px;
+}
 
-    letter-spacing: 0.05em;
-    color: #1F3F68;
-    opacity: 0.6;
+.bigText {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 30px;
+    text-align: center;
 }
 
 .header-margin {
     margin-bottom: 71px;
 }
 
-.wrapper {
+.wrapper-header {
     background: linear-gradient(0deg, #EBF3FB 8.84%, rgba(152, 195, 232, 0) 31.12%);
 }
 
@@ -69,4 +80,56 @@
 .illustration .header-img {
     max-width: 648px;
     max-height: 549px;
+}
+
+.cards {
+    margin-top: 64px;
+}
+
+.cards-big-text {
+    color: #000000;
+}
+
+.card-text {
+    color: #1F3F68;
+    letter-spacing: 0.05em;
+}
+
+.cards-box {
+    display: flex;
+    gap: 32px;
+    margin-bottom: 64px;
+}
+
+.card {
+    width: 359px;
+    margin-top: 64px;
+    box-shadow: 5px 20px 50px rgba(16, 112, 177, 0.2);
+    border-radius: 10px;
+}
+
+.wrapper-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.card-bold-text {
+    color: #1F3F68;
+    max-width: 280px;
+    font-weight: bold;
+}
+
+.card-text {
+    letter-spacing: 0.05em;
+    color: #1F3F68;
+    opacity: 0.6;
+    margin-bottom: 30px;
+    max-width: 280px;
+}
+
+.card-img {
+    max-width: 170px;
+    max-height: 120px;
+    margin-bottom: 50px;
 }
