--- a/css/index.css
+++ b/css/index.css
@@ -88,6 +88,8 @@
 
 .cards-big-text {
     color: #000000;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .card-text {
@@ -99,6 +101,8 @@
     display: flex;
     gap: 32px;
     margin-bottom: 64px;
+    justify-content: center;
+    align-items: center;
 }
 
 .card {
@@ -129,7 +133,31 @@
 }
 
 .card-img {
+    margin-top: 49px;
     max-width: 170px;
     max-height: 120px;
     margin-bottom: 50px;
+}
+
+.link {
+    text-decoration: none;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 30px;
+    letter-spacing: 0.05em;
+    color: #5A98D0;
+}
+
+.link-box {
+    display: flex;
+    justify-content: space-between;
+    width: 122px;
+    cursor: pointer;
+    margin-bottom: 44px;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
