create norm container

--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100&display=swap');
 *{
     margin: 0;
-    padding: 0;
 }
 
 .container {
-    display: grid;
-    grid-template-columns: 0.5fr 4fr 0.5fr;
+    margin: 0 auto;
+    width: 80%;
 }
 
 .navigation {
@@ -86,7 +85,7 @@
     margin-top: 64px;
 }
 
-.cards-big-text {
+.center-big-text {
     color: #000000;
     margin-left: auto;
     margin-right: auto;
